# wireguard_natter_helper

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  README.zh-CN.md  go.mod  plan.md  project.md  pyproject.toml  technical-report.md
.github/workflows/: openwrt-luci-package.yml
cmd/wgnh/: main.go
deploy/openwrt/: wgnh-agent.init  wgnh-daemon.init  wgnh-web.init  wgnh.config
deploy/systemd/: wgnh-agent.env  wgnh-agent.service  wgnh-daemon.env  wgnh-daemon.service  wgnh-web.env  wgnh-web.service
examples/: client-agent.json  fake-natter.py  server-agent-natter.json  server-agent.json
internal/agent/: agent.go  agent_test.go
internal/auth/: auth.go
internal/daemon/: daemon.go
internal/protocol/: protocol.go
internal/rpc/: rpc.go
internal/store/: store.go  store_test.go
internal/webui/: webui.go
internal/wgconfig/: wgconfig.go  wgconfig_test.go
openwrt/luci-app-wgnh/: Makefile
openwrt/luci-app-wgnh/luasrc/controller/: wgnh.lua
openwrt/luci-app-wgnh/luasrc/model/cbi/wgnh/: settings.lua
openwrt/luci-app-wgnh/luasrc/view/wgnh/: status.htm
openwrt/luci-app-wgnh/root/etc/config/: wgnh
openwrt/luci-app-wgnh/root/etc/init.d/: wgnh-agent  wgnh-daemon  wgnh-web
openwrt/wgnh/: Makefile
openwrt/wgnh/root/etc/config/: wgnh
openwrt/wgnh/root/etc/init.d/: wgnh-agent  wgnh-daemon
tests/: test_agent.py  test_store.py  test_wgconfig.py
wgnh/: __init__.py  __main__.py  agent.py  auth.py  config.py  daemon.py  protocol.py  store.py  wgconfig.py
